# internal/controllers/users/update_user.go
@@ -5,7 +5,7 @@ import (
 	"github.com/gofrs/uuid"
 	"github.com/sirupsen/logrus"
 	"middleware/user/internal/models"
-	"middleware/user/internal/repositories/users"
+	service "middleware/user/internal/services/users"
 	"net/http"
 )
 
@@ -13,21 +13,30 @@ import (
 // @Tags         user
 // @Summary      Update a user.
 // @Description  Update the user with the specified ID.
-// @Param  user  body 	  models.User{Name, Username} 	true  "User object to be updated"
-// @Param  id    path     string  		true  "User UUID formatted ID"
-// @Success 200  {object} models.User         "User object updated"
-// @Failure 400  {object} models.CustomError  "Invalid JSON format"
-// @Failure 404  {object} models.CustomError  "User not found"
-// @Failure 422  {object} models.CustomError  "Cannot parse id"
-// @Failure 500  {object} models.CustomError  "Something went wrong"
-// @Router       /users/{id} 	[put]
+// @Param        user      body       models.UserRequest true  "User object to be updated"
+// @Param        id        path       string             true  "User UUID formatted ID"
+// @Success      200       {object}   models.User              "User object updated"
+// @Failure      400       {object}   models.CustomError       "Invalid request"
+// @Failure      404       {object}   models.CustomError       "User not found"
+// @Failure      422       {object}   models.CustomError       "Cannot parse id"
+// @Failure      500       {object}   models.CustomError       "Something went wrong"
+// @Router       /users/{id}      [put]
 func UpdateUser(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	userId, _ := ctx.Value("userId").(uuid.UUID)
-	var user models.User
+	var user models.UserRequest
 	err := json.NewDecoder(r.Body).Decode(&user)
+	if err != nil {
+		http.Error(w, "Invalid JSON format", http.StatusBadRequest)
+		return
+	}
+	err = models.ValidateUserRequest(user)
+	if err != nil {
+		http.Error(w, "Invalid request payload", http.StatusBadRequest)
+		return
+	}
 
-	userNew, err := users.UpdateUser(user, userId)
+	newUser, err := service.UpdateUser(user, userId)
 	if err != nil {
 		logrus.Errorf("error : %s", err.Error())
 		customError, isCustom := err.(*models.CustomError)
@@ -42,7 +51,7 @@ func UpdateUser(w http.ResponseWriter, r *http.Request) {
 	}
 
 	w.WriteHeader(http.StatusOK)
-	body, _ := json.Marshal(userNew)
+	body, _ := json.Marshal(newUser)
 	_, _ = w.Write(body)
 	return
 }
